# diffusion-fenics

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: .main.cpp.swp  .pdeTestExamples.h.swp  CMakeLists.txt  main.cpp  pdeHelper.h  pdeSetupClasses.h  pdeTestExamples.h  poissonProblem.h  poissonProblem.ufl  poissonProblem2D.h  poissonProblem3D.h  poissonProblem3D.ufl  poissonSolver.h
src/ConvectionDiffusionPDE/: .convectionDiffusionSolver.h.swp  CMakeLists.txt  convectionDiffusion1D.h  convectionDiffusion1D.ufl  convectionDiffusion2D.h  convectionDiffusion2D.ufl  convectionDiffusion3D.h  convectionDiffusion3D.ufl  convectionDiffusionSolver.h  velocity1D.h  velocity1D.ufl  velocity2D.h  velocity2D.ufl  velocity3D.h  velocity3D.ufl
src/ConvectionDiffusionPDE_Mesh/: convectionDiffusion1D.h  convectionDiffusion1D.ufl  convectionDiffusion2D.h  convectionDiffusion2D.ufl  convectionDiffusion3D.h  convectionDiffusion3D.ufl  convectionDiffusionSolver.h  velocity1D.ufl  velocity2D.h
src/CurrentPDE/: CMakeLists.txt  current1D.h  current1D.ufl  current2D.h  current2D.ufl  current2DExperimental.h  current2DExperimental.ufl  current3D.h  current3D.ufl  current3D_debug.py  currentSolver.h
src/PoissonPDE/: CMakeLists.txt  poisson1D.h  poisson1D.ufl  poisson2D.h  poisson2D.ufl  poisson3D.h  poissonProblem1D.h  poissonProblem2D.h  poissonProblem3D.h  poissonSolver.h
src/PoissonPDE_Mesh/: .poissonSolver.h.swp  CMakeLists.txt  poisson3D.h  poisson3D.ufl  poissonSolver.h
src/Solver/: CMakeLists.txt  convectionDiffusionSolver.h  currentSolver.h  poissonSolver.h  rungeKuttaCurrentEquation.h  rungeKuttaDiffusionEquation.h
src/UFL/: .gitignore  CMakeLists.txt  current3D.ufl  current3DExperimental.ufl  current3DFixCurrent.ufl  current3DFixPotential.ufl  current3DLiquid.ufl  current3DSolid.ufl  gradientCurrentEquation.ufl  l2ErrorCurrentEquation.ufl  poisson3D.ufl  rungeKuttaDiffusion.ufl  rungeKuttaDiffusionOld.ufl  velocity3D.ufl
test_mesh/: test_mesh.geo  test_mesh_facet_region.xml.bck  test_mesh_physical_region.xml
